--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       <section>
         <div class="container">
           <div class="row">
-            <div class="col-sm"> <img src="../HW-20/images/EMV logo.png">
+            <div class="col-sm"> <img src="../hw-20/images/emv logo.png">
              
             </div>
-            <div class="col-sm"> <img src="../HW-20/images/EMV mobile photos.png">
+            <div class="col-sm"> <img src="../hw-20/images/emv mobile photos.png">
               
             </div>
           </div>
@@ -43,50 +43,52 @@
 </section>
 <div class="w3-container w3-content w3-center w3-padding-64" id="personas">
   <div id="fadeIn">
-    <div class="col-sm"> <img src="../HW-20/images/EMV (1).jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+    <div class="col-sm"> <img src="../hw-20/images/user persona.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
       User Persona
     </div>
-    <div class="col-sm"> <img src="../HW-20/images/EMV (2).jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+    <div class="col-sm"> <img src="../hw-20/images/proto persona.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
       Proto Persona
     </div>
-    <div class="col-sm"> <img src="../HW-20/images/01-User Journey Template (3).png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+    <div class="col-sm"> <img src="../hw-20/images/user journey template.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
       User Journey Map
     </div>
   </div>
 </div>
 
+
 <section>
+  </div>
   <h2>User Research</h2>
 <div class="mySlides w3-display-container w3-center">
-  <img src="../HW-20/images/EMV Affinity Diagram (1).jpg" style="width:95%">
+  <img src="../hw-20/images/affinity diagram.png" style="width:95%">
   <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
     <h3>AFFINITY DIAGRAM</h3>
     <p><b>Compiled Responses from Interviewees, We interviewed 10 people between the ages of 24-39</b></p>
   </div>
 </div>
 <div class="mySlides w3-display-container w3-center">
-  <img src="../HW-20/images/EMV Affinity Diagram (2).jpg" style="width:95%">
+  <img src="../hw-20/images/card sorting.png" style="width:95%">
   <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
     <h3>CARD SORTING</h3>
     <p><b>Key Category Finds from all Interviewees</b></p>
   </div>
 </div>
 <div class="mySlides w3-display-container w3-center">
-  <img src="../HW-20/images/EMV Affinity Diagram (3).jpg" style="width:95%">
+  <img src="../hw-20/images/ideations.png" style="width:95%">
   <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
     <h3>IDEATIONS</h3>
     <p><b>Further Brain Storming</b></p>
   </div>
 </div>
 <div class="mySlides w3-display-container w3-center">
-  <img src="../HW-20/images/EMV Affinity Diagram (4).jpg" style="width:95%">
+  <img src="../hw-20/images/priority matrix.png" style="width:95%">
   <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
     <h3>FEATURE PRIORITIZATION MATRIX</h3>
     <p><b>Our Game Plan of which items are Priority vs Items which can be added on in the Future</b></p>
   </div>
 </div>
 <div class="mySlides w3-display-container w3-center">
-  <img src="../HW-20/images/EMV research.png" style="width:95%">
+  <img src="../hw-20/images/emv research.png" style="width:95%">
   <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
     <h3>What our Users Want and Need</h3>
     <p><b>Key Topics that kept arising during the interviews</b></p>
